(lang dune 3.13)

(name RISV_V_Task)

(generate_opam_files true)

(source
 (github sanpdgn/RISC_V_Task))

(authors "Nitish Kumar")

(maintainers "Nitish Kumar")

(license MIT)


(package
 (name RISV_V_Task)
 (synopsis "Coding Task-1 for RISC-V lfx Sailing Downstream Project")
 (depends ocaml dune)
 )
